# autoremix

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  TEST_SCRIPT.md  launch-linux.sh  launch-macos.sh  launch.bat
.claude/commands/paul/: add-phase.md  apply.md  assumptions.md  audit.md  complete-milestone.md  config.md  consider-issues.md  discover.md  discuss-milestone.md  discuss.md  flows.md  handoff.md  help.md  init.md  map-codebase.md  milestone.md  pause.md  plan-fix.md  plan.md  progress.md  register.md  remove-phase.md  research-phase.md  research.md  resume.md  status.md  unify.md  verify.md
.claude/paul-framework/references/: checkpoints.md  context-management.md  git-strategy.md  loop-phases.md  plan-format.md  quality-principles.md  research-quality-control.md  sonarqube-integration.md  specialized-workflow-integration.md  subagent-criteria.md  tdd.md  work-units.md
.claude/paul-framework/rules/: commands.md  references.md  style.md  templates.md  workflows.md
.claude/paul-framework/templates/: CONTEXT.md  DEBUG.md  DISCOVERY.md  HANDOFF.md  ISSUES.md  MILESTONES.md  PLAN.md  PROJECT.md  RESEARCH.md  ROADMAP.md  SPECIAL-FLOWS.md  STATE.md  SUMMARY.md  UAT-ISSUES.md  config.md  milestone-archive.md  milestone-context.md  paul-json.md
.claude/paul-framework/workflows/: apply-phase.md  audit-plan.md  complete-milestone.md  configure-special-flows.md  consider-issues.md  create-milestone.md  debug.md  discovery.md  discuss-milestone.md  discuss-phase.md  init-project.md  map-codebase.md  pause-work.md  phase-assumptions.md  plan-phase.md  quality-gate.md  register-manifest.md  research.md  resume-project.md  roadmap-management.md  transition-phase.md  unify-phase.md  verify-work.md
.github/workflows/: ci.yml  release.yml
.paul/: PROJECT.md  ROADMAP.md  STATE.md  config.md
.paul/phases/00-setup/: 00-01-PLAN.md  00-01-SUMMARY.md
.paul/phases/01-interfaces/: 01-01-PLAN.md  01-01-SUMMARY.md
.paul/phases/02-stem-separation/: 02-01-PLAN.md  02-01-SUMMARY.md
.paul/phases/03-remix-engines/: 03-01-PLAN.md  03-01-SUMMARY.md
.paul/phases/04-plugin-ui/: 04-01-PLAN.md  04-01-SUMMARY.md
.paul/phases/05-integration/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md
.paul/phases/06-release/: 06-01-PLAN.md  06-01-SUMMARY.md
.paul/phases/07-ui-redesign/: 07-01-PLAN.md  07-01-SUMMARY.md  07-02-PLAN.md  07-02-SUMMARY.md  07-03-PLAN.md  07-03-SUMMARY.md
.paul/phases/08-pro-ui/: 08-01-PLAN.md  08-01-SUMMARY.md  08-02-PLAN.md  08-02-SUMMARY.md  08-03-PLAN.md  08-03-SUMMARY.md  08-04-PLAN.md  08-04-SUMMARY.md  08-05-PLAN.md  08-05-SUMMARY.md  design-spec.md
.paul/phases/09-remix-presets/: 09-01-PLAN.md  09-01-SUMMARY.md  09-02-PLAN.md  09-02-SUMMARY.md  09-03-PLAN.md  09-03-SUMMARY.md  09-04-PLAN.md  09-04-SUMMARY.md  09-05-PLAN.md  09-05-SUMMARY.md
.paul/phases/10-effect-chain/: 10-01-PLAN.md  10-01-SUMMARY.md  10-02-PLAN.md  10-02-SUMMARY.md  10-03-PLAN.md  10-03-SUMMARY.md  design-spec.md
.paul/phases/11-demucs-separator/: 11-01-PLAN.md  11-01-SUMMARY.md  11-02-PLAN.md  11-02-SUMMARY.md
.paul/phases/12-separator-ui/: 12-01-PLAN.md  12-01-SUMMARY.md
.paul/phases/13-interactive-mixing/: 13-01-PLAN.md  13-01-SUMMARY.md  13-02-PLAN.md  13-02-SUMMARY.md  13-03-PLAN.md  13-03-SUMMARY.md
.paul/phases/14-musical-chop/: 14-01-PLAN.md  14-01-SUMMARY.md  14-02-PLAN.md  14-02-SUMMARY.md  14-03-PLAN.md  14-03-SUMMARY.md  14-04-PLAN.md  14-04-SUMMARY.md
.paul/phases/15-musical-ui/: 15-01-PLAN.md  15-01-SUMMARY.md  15-02-PLAN.md  15-02-SUMMARY.md
.paul/phases/16-ux-polish/: 16-01-PLAN.md  16-01-SUMMARY.md  16-02-PLAN.md  16-02-SUMMARY.md
.paul/phases/17-more-styles/: 17-01-PLAN.md  17-01-SUMMARY.md  17-02-PLAN.md  17-02-SUMMARY.md
.paul/phases/18-ux-redesign/: 18-01-PLAN.md  18-01-SUMMARY.md  18-02-PLAN.md  18-02-SUMMARY.md  18-03-PLAN.md  18-03-SUMMARY.md  18-04-PLAN.md  18-04-SUMMARY.md  18-05-PLAN.md  18-05-SUMMARY.md
.paul/phases/19-stem-drag/: 19-01-PLAN.md  19-01-SUMMARY.md
.paul/phases/20-audio-playback/: 20-01-PLAN.md  20-01-SUMMARY.md
.paul/phases/21-automashup/: 21-01-PLAN.md  21-01-SUMMARY.md  21-02-PLAN.md  21-02-SUMMARY.md  21-03-PLAN.md  21-03-SUMMARY.md  21-04-PLAN.md  21-05-PLAN.md  (+3 more)
libs/: demucs.md
models/: .gitignore  README.md
plugin/: CMakeLists.txt
plugin/include/: AudioBridge.h  AutoRemixLookAndFeel.h  IRemixEngine.h  IStemSeparator.h  ModelStatusDot.h  PluginEditor.h  PluginProcessor.h  PluginTypes.h  RemixRegistry.h  ScreenBase.h  ScreenContext.h  ScreenEmpty.h  ScreenMashup.h  ScreenModeParams.h  ScreenRender.h  ScreenSeparating.h  ScreenStemsReady.h  SeparatorRegistry.h  SidecarHealthDot.h  StyleTabBar.h  WaveformDisplay.h
plugin/include/autoremix/: PluginEditor.h  PluginProcessor.h
plugin/include/dsp/: ModelDownloader.h  NativeAlgorithmicSeparator.h  NativeAnalysis.h  NativeCueReader.h  NativeCueSidecar.h  NativeDemucsSeparator.h  NativeEffectChainEngine.h  NativeEffectOps.h  NativeMashupEngine.h  NativePresetLoaders.h  NativePresetTypes.h  NativeRemixEngines.h  NativeSampleEngine.h  NativeSampleLibrary.h  NativeStructuredRemixEngine.h  TimePitchStretcher.h
plugin/source/: PluginEditor.cpp  PluginProcessor.cpp
plugin/src/: AudioBridge.cpp  AutoRemixEditor.cpp  AutoRemixProcessor.cpp
plugin/src/engines/: ChoppedAndScrewedEngine.cpp  DrumAndBassEngine.cpp  SlowedReverbEngine.cpp
plugin/src/separators/: AlgorithmicSeparator.cpp  SpleeterSeparator.cpp
python/: alvin_audio.py  chopped_and_screwed.py  requirements.txt  slowed_reverb.py
python/scripts/: start_server.sh
python/server/: main.py  models.py  registry.py
python/tests/: conftest.py  test_chain_interpreter.py  test_ops.py  test_ops_musical.py  test_presets.py  test_remix.py  test_separate.py
sidecar/: requirements-dev.txt  requirements.txt
sidecar/scripts/: start_server.sh
sidecar/server/: main.py  models.py
sidecar/tests/: test_analysis.py  test_health.py  test_mashup.py  test_mashup_presets.py  test_presets.py
tests/scratch/: CMakeLists.txt  demucs_smoke.cpp
tools/: README.md  export_demucs_onnx.py  requirements.txt
(+103 files in other folders)
